[gd_scene load_steps=4 format=3 uid="uid://cbahbck2c4uus"]

[ext_resource type="Script" path="res://LP4-3.gd" id="1_2ipx8"]

[sub_resource type="LabelSettings" id="LabelSettings_sw3kk"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_m7npg"]
font_size = 30

[node name="LP4-3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ipx8")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 578.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 448.0
offset_right = 704.0
offset_bottom = 578.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 448.0
offset_right = 1088.0
offset_bottom = 578.0
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 868.0
offset_bottom = 240.0
text = "Enter number of eggs purchased:
"
label_settings = SubResource("LabelSettings_sw3kk")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 216.0
offset_right = 960.0
offset_bottom = 408.0
label_settings = SubResource("LabelSettings_m7npg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 24.0
offset_right = 1088.0
offset_bottom = 152.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
